# capella-polarion

./: .buildinfo  .commitlintrc.yml  .coveragerc  .git_archival.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  REUSE.toml  configuration.html  features.html  genindex.html  git-conventional-commits.json.license  howtos.html  index.html  objects.inv  py-modindex.html  pyproject.toml  roadmap.html  search.html  searchindex.js
.github/workflows/: build-test-publish.yml  docs.yml  lint.yml
_sources/: features.rst.txt  index.rst.txt  roadmap.rst.txt
_sources/code/: capella2polarion.connectors.rst.txt  capella2polarion.converters.rst.txt  capella2polarion.data_model.rst.txt  capella2polarion.documents.rst.txt  capella2polarion.elements.rst.txt  capella2polarion.plugins.rst.txt  capella2polarion.rst.txt  modules.rst.txt  tests.rst.txt
_sources/configuration/: polarion.rst.txt  sync.rst.txt
_sources/examples/: 01 How to develop and debug a FA LiveDoc.ipynb.txt  02 How to generate work-items.ipynb.txt  03 How to develop and debug a MA LiveDoc.ipynb.txt
_sources/features/: sync.rst.txt
_sources/pipeline templates/: gitlab.rst.txt
capella2polarion/: __init__.py  __main__.py  c2pcli.py  c2polarion.py  capella2polarioncli.py  cli.py  data.py  data_models.py  errors.py  errors_and_warnings_report.j2  polarion.py  polarion_html_helper.py  polarion_worker.py  worker.py
capella2polarion/capella_polarion_conversion/: element_converter.py  link_converter.py
capella2polarion/connector/: polarion_repo.py
capella2polarion/connectors/: __init__.py  polarion_repo.py  polarion_worker.py  polarion_worker_parallel.py
capella2polarion/converters/: __init__.py  capella_object_renderer.py  converter_config.py  converter_data_session.py  data_session.py  document_config.py  document_renderer.py  element_converter.py  link_converter.py  model_converter.py  plugin_config.py  plugin_interfaces.py  polarion_html_helper.py  text_work_item_provider.py
capella2polarion/data_model/: __init__.py  converter_config.py  document_data.py  work_item_attachments.py  work_items.py
capella2polarion/documents/: __init__.py  document_config.py  document_renderer.py  mass_document_renderer.py  text_work_item_provider.py
capella2polarion/elements/: __init__.py  api_helper.py  capella_object_renderer.py  capella_polarion_mapping.py  converter_config.py  data_session.py  diagram.py  element.py  element_converter.py  element_converter_parallel.py  helpers.py  link_converter.py  model_converter.py  model_converter_parallel.py  serialize.py
capella2polarion/plugins/: __init__.py  plugin_config.py  plugin_interfaces.py
capella2polarion/polarion_api/: __init__.py  client.py
capella2polarion/polarion_connector/: polarion_repo.py
ci-templates/gitlab/: render_documents.yaml  synchronise_diagrams.yml  synchronise_elements.yml  synchronise_elements_with_exit_codes.yml
code/: capella2polarion.connectors.html  capella2polarion.converters.html  capella2polarion.data_model.html  capella2polarion.documents.html  capella2polarion.elements.html  capella2polarion.html  capella2polarion.plugins.html  modules.html  tests.html
configuration/: polarion.html  render_documents.html  sync.html
docs/: .readthedocs.yaml  Makefile  make.bat  requirements.txt
docs/model/capella2polarion/: .project  .project.license  capella2polarion.afm  capella2polarion.aird  capella2polarion.capella
docs/source/: conf.py  configuration.rst  features.rst  howtos.rst  index.rst  roadmap.rst
docs/source/_static/: grouped_linked_work_items.png.license
docs/source/configuration/: polarion.rst  render_documents.rst  sync.rst
docs/source/examples/: .gitignore  01 How to develop and debug a FA LiveDoc.ipynb  01 How to develop and debug a LiveDoc.ipynb  02 How to generate work-items.ipynb  03 How to develop and debug a MA LiveDoc.ipynb
docs/source/features/: render_documents.rst  sync.rst
docs/source/pipeline templates/: gitlab.rst
examples/: 01 How to develop and debug a FA LiveDoc.html  02 How to generate work-items.html  03 How to develop and debug a MA LiveDoc.html  03 How to develop and debug a MA LiveDoc.ipynb
features/: render_documents.html  sync.html
jupyter-notebooks/: document_generation.ipynb  element_generation.ipynb
jupyter-notebooks/document_templates/: test-classes.html.j2  test-icd.html.j2
jupyter-notebooks/element_templates/: class.html.j2  common_macros.html.j2  exchange_item.html.j2
pipeline templates/: gitlab.html
tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_converter_config.py  test_documents.py  test_elements.py  test_polarion_worker_documents.py  test_worker.py  test_workitem_attachments.py
tests/data/: plugins.yaml
tests/data/diagram_cache/: index.json
tests/data/documents/: combined_config.yaml  config.yaml  config.yaml.j2  full_authority_config.yaml  mixed_authority_doc.html  mixed_authority_doc_workitem_inserted.html  mixed_config.yaml
tests/data/expected_requests/: delete_work_item.json  delete_work_item_link.json  delete_work_item_link_2.json  delete_work_item_links.json  delete_work_items.json  patch_work_item_completely.json  patch_work_item_description.json  patch_work_item_status.json  patch_work_item_status_deleted.json  patch_work_item_title.json  post_work_item_link.json  post_work_item_links.json  post_workitem.json  post_workitems.json
tests/data/jinja_templates/: class.html.j2  classes.html.j2  common_macros.html.j2  functional_exchange.html.j2
tests/data/mock_api_responses/: created_work_item_links.json  created_work_items.json  error.json  get_linked_work_items_next_page.json  get_linked_work_items_no_next_page.json  project.json  workitems_next_page.json  workitems_next_page_error.json  workitems_no_next_page.json
tests/data/model/: Melody Model Test.afm.license  Melody Model Test.aird  Melody Model Test.capella
(+16 files in other folders)
